# trade_analysis

./: .gitignore  append_order_history.py  main.py  pyproject.toml  requirements.txt  sync_account_summary_to_notion.py  sync_all.py  sync_positions_to_notion.py
src/: client.py  constants.py  position.py
test/: test_google_sheet_connection.py
